--- a/spices/cix-ffmpeg.org
+++ b/spices/cix-ffmpeg.org
@@ -1,6 +1,6 @@
 # File           : cix-ffmpeg.org
 # Created        : <2016-11-16 Wed 23:24:34 GMT>
-# Last Modified  : <2016-11-16 Wed 23:38:01 GMT> sharlatan
+# Last Modified  : <2016-11-17 Thu 23:35:53 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -10,7 +10,11 @@
 #+TITLE: FFmpeg
 
 http://ffmpeg.org/
-
+FFmpeg is a complete and free Internet live audio and video
+broadcasting solution for Linux/Unix. It also includes a digital
+VCR. It can encode in real time in many formats including MPEG1 audio
+and video, MPEG4, h263, ac3, asf, avi, real, mjpeg, and flash.
+-----
 * Index
 #+BEGIN_EXAMPLE
     ffmpeg (1)           - ffmpeg video converter
